tests/baselines/reference/superWithTypeArgument2.errors.txt
tests/cases/compiler/superWithTypeArgument2.ts(7,14): error TS1034: 'super' must be followed by an argument list or member access.
tests/cases/compiler/superWithTypeArgument2.ts(6,5): error TS2377: Constructors for derived classes must contain a 'super' call.


==== tests/cases/compiler/superWithTypeArgument2.ts (2 errors) ====
    class C<T> {
        foo: T;
    }
    
    class D<T> extends C<T> {
        constructor(x) {
        ~~~~~~~~~~~~~~~~
            super<T>(x);
                 ~
!!! error TS1034: 'super' must be followed by an argument list or member access.
    ~~~~~~~~~~~~~~~~~~~~
        }
    ~~~~~
!!! error TS2377: Constructors for derived classes must contain a 'super' call.
    }